expr attributes in access token